@@ -1,1 +1,1 @@
-deceptive{nbsp}spaces{nbsp}live{nbsp}here
+deceptive spaces live here
